--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,48 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^7.4 || ^8.0",
         "setono/doctrine-orm-batcher-bundle": "^0.3.1",
-        "sylius/sylius": "^1.9",
+        "sylius/sylius": "~1.9.0 || ~1.10.0 || ~1.11.0",
         "symfony/messenger": "^4.4 || ^5.0",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^6.2",
-        "phpunit/phpunit": "^9.3",
-        "roave/security-advisories": "dev-master",
-        "setono/code-quality-pack": "^1.4",
-        "setono/sylius-behat-pack": "^0.1",
-        "symfony/debug-bundle": "^5.1",
-        "symfony/dotenv": "^5.1",
-        "symfony/intl": "^4.4 || ^5.0",
-        "symfony/web-profiler-bundle": "^5.0",
-        "symfony/web-server-bundle": "^4.4 || ^5.0"
+        "behat/behat": "^3.7",
+        "behat/mink-selenium2-driver": "^1.4",
+        "dmore/behat-chrome-extension": "^1.3",
+        "dmore/chrome-mink-driver": "^2.7",
+        "friends-of-behat/mink": "^1.8",
+        "friends-of-behat/mink-browserkit-driver": "^1.4",
+        "friends-of-behat/mink-extension": "^2.4",
+        "friends-of-behat/page-object-extension": "^0.3",
+        "friends-of-behat/suite-settings-extension": "^1.0",
+        "friends-of-behat/symfony-extension": "^2.1",
+        "friends-of-behat/variadic-extension": "^1.3",
+        "lakion/mink-debug-extension": "^2.0.0",
+        "phpspec/phpspec": "^7.0",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "0.12.88",
+        "phpstan/phpstan-doctrine": "0.12.37",
+        "phpstan/phpstan-strict-rules": "^0.12.0",
+        "phpstan/phpstan-webmozart-assert": "0.12.12",
+        "phpunit/phpunit": "^9.5",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "sylius-labs/coding-standard": "^4.0",
+        "symfony/browser-kit": "^4.4 || ^5.2",
+        "symfony/debug-bundle": "^4.4 || ^5.2",
+        "symfony/dotenv": "^4.4 || ^5.2",
+        "symfony/intl": "^4.4 || ^5.2",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
+        "vimeo/psalm": "^4.7"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/thanks": false,
+            "dealerdirect/phpcodesniffer-composer-installer": false,
+            "phpstan/extension-installer": false
+        }
     },
     "extra": {
         "branch-alias": {
