--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,16 +13,16 @@ on:
 
 jobs:
     tests:
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-22.04
 
         name: "Sylius ${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }}"
 
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.0", "7.4"]
+                php: ["8.0"]
                 symfony: ["^4.4", "^5.2"]
-                sylius: ["~1.9", "~1.10.0", "~1.11.0"]
+                sylius: ["~1.11.0"]
                 node: ["12.x"]
                 mysql: ["8.0"]
 
