--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
         "symfony/web-profiler-bundle": "^4.4 || ^5.2",
         "vimeo/psalm": "^4.7"
     },
+    "conflict": {
+        "doctrine/orm": ">=2.15.2"
+    },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
